new logic setup_config
